--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
   "homepage": "https://github.com/sekainogenkai/faito#readme",
   "dependencies": {
     "babylonjs": "^2.5.0",
+    "exports-loader": "^0.6.3",
     "express": "^4.14.0",
     "express-autoserve": "0.0.2",
     "get-env": "^0.5.10",
+    "imports-loader": "^0.7.0",
     "promisify-node": "^0.4.0",
     "webpack": "^1.14.0",
     "webpack-babylonjs-blender": "^1.0.0",
