--- a/package.json
+++ b/package.json
@@ -28,12 +28,12 @@
     "promisify-node": "^0.4.0",
     "webpack": "^1.14.0",
     "webpack-babylonjs-blender": "^1.0.0",
+    "webpack-dev-middleware": "^1.9.0",
+    "webpack-hot-middleware": "^2.14.0",
     "webpack-manifest-plugin": "^1.1.0"
   },
   "devDependencies": {
     "dependency-lint": "^4.3.1",
-    "mocha": "^3.2.0",
-    "webpack-dev-middleware": "^1.9.0",
-    "webpack-hot-middleware": "^2.14.0"
+    "mocha": "^3.2.0"
   }
 }
