--- a/package.json
+++ b/package.json
@@ -19,6 +19,10 @@
   },
   "homepage": "https://github.com/sekainogenkai/faito#readme",
   "dependencies": {
+    "babel-core": "^6.21.0",
+    "babel-loader": "^6.2.10",
+    "babel-preset-es2015": "^6.18.0",
+    "babel-preset-react": "^6.16.0",
     "babylonjs": "^2.5.0",
     "babylonjs-blender-loader": "^1.0.3",
     "exports-loader": "^0.6.3",
@@ -27,6 +31,8 @@
     "get-env": "^0.5.10",
     "imports-loader": "^0.7.0",
     "promisify-node": "^0.4.0",
+    "react": "^15.4.1",
+    "react-dom": "^15.4.1",
     "webpack": "^1.14.0",
     "webpack-dev-middleware": "^1.9.0",
     "webpack-hot-middleware": "^2.14.0",
