--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "babel-preset-react": "^6.16.0",
     "babylonjs": "^2.5.0",
     "babylonjs-blender-loader": "^1.0.3",
+    "cannon": "^0.6.2",
     "exports-loader": "^0.6.3",
+    "expose-loader": "^0.7.1",
     "express": "^4.14.0",
     "express-autoserve": "0.0.2",
     "get-env": "^0.5.10",
