--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "webpack",
-    "test": "mocha && dependency-lint",
+    "test": "npm run build && mocha && dependency-lint",
     "start": "node index.cgi"
   },
   "repository": {
