Add --bail to webpack invocation.
So annoying how webpack considers indicating failure an optional
feature which must be turned on. Come on, @sokra!

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "webpack",
+    "build": "webpack --bail",
     "test": "npm run build && mocha && dependency-lint",
     "start": "node index.cgi"
   },
