Remove es2015 during development except modules.
Necessary to get browser const/let enforcement because babel does
not do temporal deadzone checks by default. We only need the modules
support so that webpack1 can eat the modules properly (though maybe
if we upgrade to webpack2 that would no longer be an issue).

--- a/dependency-lint.yml
+++ b/dependency-lint.yml
@@ -1,6 +1,8 @@
 ignoreErrors:
   unused:
     - babel-preset-es2015
+    - babel-preset-es2016
+    - babel-preset-es2017
     - babel-preset-react
 requiredModules:
   files:
