--- a/.babelrc
+++ b/.babelrc
@@ -1,3 +1,4 @@
 {
-  "presets" : ["es2015", "react"]
+  "plugins": ["transform-es2015-modules-commonjs"],
+  "presets" : ["es2015", "es2016", "es2017", "react"]
 }
