--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "babel-core": "^6.21.0",
     "babel-loader": "^6.2.10",
     "babel-preset-es2015": "^6.18.0",
+    "babel-preset-es2016": "^6.22.0",
+    "babel-preset-es2017": "^6.22.0",
     "babel-preset-react": "^6.16.0",
     "babylonjs": "^2.5.0",
     "babylonjs-blender-loader": "^1.0.3",
