--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "express-autoserve": "0.0.2",
     "get-env": "^0.5.10",
     "imports-loader": "^0.7.0",
+    "mini-signals": "^1.1.1",
     "promisify-node": "^0.4.0",
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
