--- a/.travis.yml
+++ b/.travis.yml
@@ -11,3 +11,5 @@ before_install:
   - sudo apt-get install blender -y
 before_script:
   - node_modules/.bin/node-babylonjs-blender-install
+addons:
+  artifacts: true
