--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,6 @@ before_install:
 before_script:
   - node_modules/.bin/node-babylonjs-blender-install
 addons:
-  artifacts: true
+  artifacts:
     paths:
-      - $(find build -type f -printf ':%h/%f' | tail -c +2)
+      - "$(find build -type f -printf ':%h/%f' | tail -c +2)"
