--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "babylonjs": "^2.5.0",
     "babylonjs-blender-loader": "^1.0.3",
     "cannon": "^0.6.2",
+    "dotenv": "^4.0.0",
     "expose-loader": "^0.7.1",
     "express": "^4.14.0",
     "express-autoserve": "0.0.2",
