--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ after_success:
   - curl -sL https://raw.githubusercontent.com/travis-ci/artifacts/master/install | bash
   - export ARTIFACTS_PATHS=$(find build -type f -printf ':%h/%f' | tail -c +2)
   - export ARTIFACTS_TARGET_PATHS=${TRAVIS_REPO_SLUG}/${TRAVIS_BUILD_NUMBER}/${TRAVIS_JOB_NUMBER}
-  - DO_DEPLOY=$([ "${TRAVIS_PULL_REQUEST}" == false ] && [ "${TRAVIS_BRANCH}" == master ] && echo true || echo false)
+  - DO_DEPLOY=$([ "${TRAVIS_PULL_REQUEST}" == false ] && [ "${TRAVIS_BRANCH}" == deploy ] && echo true || echo false)
   - echo DO_DEPLOY="${DO_DEPLOY}"
   - '[ "${DO_DEPLOY}" == true ] && artifacts -D upload'
   - curl https://sam.ohnopub.net/~faito/webhook-pull/index.cgi/simple/faito/"${WEBHOOK_PULL_KEY}"/
