Enable automatic server restart upon file being touched with watchr.

--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "promisify-node": "^0.4.0",
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
+    "watchr": "^3.0.1",
     "webpack": "^2.2.0",
     "webpack-dev-middleware": "^1.9.0",
     "webpack-hot-middleware": "^2.14.0",
